@@ -13,7 +13,6 @@ BRANCH_COMPACTION
 CALENDAR_PICKER
 CHANNEL_MESSAGING
 CLASSIC_INTERPRETER
-CLIENT_BASED_GEOLOCATION
 CODEBLOCK_SAMPLING
 COMPARE_AND_SWAP
 COMPUTED_GOTO
@@ -30,7 +29,6 @@ CSS_SHADERS
 CTI
 CUSTOM_SCHEME_HANDLER
 DASHBOARD_SUPPORT
-DATABASE
 DATAGRID
 DATALIST
 DATA_TRANSFER_ITEMS
@@ -61,7 +59,6 @@ FILE_SYSTEM
 FILTERS
 FIXED_REPORTED_SIZE
 FLEXBOX
-FOO
 FTPDIR
 FULLSCREEN_API
 GAMEPAD
@@ -175,12 +172,8 @@ STYLE_SCOPED
 SUBPIXEL_LAYOUT
 SUCCESS_STATS
 SVG
-SVG_ANIMATION
-SVG_AS_IMAGE
 SVG_DOM_OBJC_BINDINGS
-SVG_EXPERIMENTAL_FEATURES
 SVG_FONTS
-SVG_FOREIGN_OBJECT
 TEXT_CARET
 TEXT_NOTIFICATIONS_ONLY
 THREADED_SCROLLING
