@@ -1,5 +1,16 @@
 2012-09-13  Rob Buis  <rbuis@rim.com>
 
+        [BlackBerry] Cleanup AboutDataEnableFeatures.in
+        https://bugs.webkit.org/show_bug.cgi?id=96695
+
+        Reviewed by Antonio Gomes.
+
+        Remove unused features.
+
+        * WebCoreSupport/AboutDataEnableFeatures.in:
+
+2012-09-13  Rob Buis  <rbuis@rim.com>
+
         [BlackBerry] Rename InspectorOverlay in blackberry/WebKitSupport
         https://bugs.webkit.org/show_bug.cgi?id=96689
 
